# api

./: .gitignore  Dockerfile  dependencies.py  main.py  pyproject.toml  readme.md  schemas.py
api/: dependencies.py  main.py  schemas.py
core/services/data_transfer_objects/: conversation.py
core/services/use_cases/: __init__.py  conversations.py  gpt_helper.py
dev-frontend/: index.html  package-lock.json  package.json
dev-frontend/src/: index.js
entities/: Conversation.py  Message.py  __init__.py  conversation.py  entity.py  message.py
persistence/: __init__.py
persistence/repositories/: __init__.py  base_repository.py
persistence/repositories/memory_repository/: __init__.py  conversation_repository.py  data_store.py  message_repository.py
services/data_transfer_objects/: __init__.py  conversation.py  message.py
services/use_cases/: conversations.py  gpt_helper.py
src/api/: dependencies.py  main.py  schemas.py
src/api/auth/: OAuth2CookieBased.py
src/api/schemas/: __init__.py  conversation.py  message.py  token.py  user.py
src/core/entities/: __init__.py  conversation_aggregate.py  entity.py  message.py  response_pipeline.py  token.py  user.py
src/core/services/data_transfer_objects/: conversation.py  message.py
src/core/services/response_pipeline/: __init__.py  language_model.py  response_pipeline.py  transcription_model.py  tts_model.py
src/core/services/use_cases/: __init__.py  conversations.py  gpt_helper.py  (+2 more)
src/persistence/: __init__.py
src/persistence/database/: models.py
src/persistence/repositories/: base_repository.py
(+10 files in other folders)
