[tool.poetry]
name = "project-linuga-api"
version = "0.1.0"
description = ""
authors = ["Connor Keevill <connor.keevill.19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
openai = "^1.3.5"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
