[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Connor Keevill <connor.keevill.19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
openai = "^1.3.5"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.25"
bcrypt = "^4.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
multimethod = "^1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
